--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "handlebars-dateformat": "^1.1.1",
     "https": "^1.0.0",
     "nodemon": "^1.19.3",
+    "parseurl": "^1.3.3",
     "request": "^2.88.0"
   }
 }
