--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "nodemon": "^1.19.3",
     "parseurl": "^1.3.3",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0"
   }
 }
